--- a/Automation_Test/SeleniumAdvantage/RookiesTest/Reports/Latest Reports/index.html
+++ b/Automation_Test/SeleniumAdvantage/RookiesTest/Reports/Latest Reports/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">08/11/2022 12:16:16 CH</span>
+                    <span class="badge badge-primary">10/11/2022 1:11:09 SA</span>
                 </a>
             </li>
         </ul>
@@ -151,8 +151,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">RookiesTest.LoginTest</p> 
-								<p class="duration text-sm">0h:0m:5s+130ms</p> 
-								<span class="datetime">12:16:16 CH</span>
+								<p class="duration text-sm">0h:0m:15s+092ms</p> 
+								<span class="datetime">01:11:09 SA</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -160,9 +160,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">RookiesTest.LoginTest</h5>
-										<span class='badge badge-success'>08/11/2022 12:16:16 CH</span>
-										<span class='badge badge-danger'>08/11/2022 12:16:22 CH</span>
-										<span class='badge badge-default'>0h:0m:5s+130ms</span>
+										<span class='badge badge-success'>10/11/2022 1:11:09 SA</span>
+										<span class='badge badge-danger'>10/11/2022 1:11:25 SA</span>
+										<span class='badge badge-default'>0h:0m:15s+092ms</span>
 									</div>
 									<div class="m-t-15">
 		                                	<div class="attributes">
@@ -177,6 +177,60 @@
 <div class="mt-4">
 	
 	<div class="accordion">
+			<div class="card">
+				<div class="card-header" role="tab">
+					<h5 class="card-title">
+						<div class="node">UserCanInputUserName</div>
+						<div class="status-avatar float-right pass-bg">
+							<i class="fa fa-check text-white"></i>
+                        </div>
+					</h5>
+				</div>
+				<div class="collapse">
+					<div class="card-body">
+						
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>01:11:15</td>
+				<td>
+Highlight element [Element (id = 020f2ada-1517-40a1-b35e-2ccf2c3ed30f)] passed									</td>
+			</tr>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>01:11:15</td>
+				<td>
+<span class='badge black-text green'>Highlight element [Element (id = 020f2ada-1517-40a1-b35e-2ccf2c3ed30f)] passed</span>									</td>
+			</tr>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>01:11:16</td>
+				<td>
+Take screenshot successfully									</td>
+			</tr>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>01:11:16</td>
+				<td>
+<span class='badge black-text green'>Take screenshot successfully</span>									</td>
+			</tr>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>01:11:16</td>
+				<td>
+Sendkeys to element [//input[@name = 'uid']] passed									</td>
+			</tr>
+	</tbody>
+</table>
+						<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011115.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011115.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011115.png'>					</div>
+				</div>
+			</div>
 			<div class="card">
 				<div class="card-header" role="tab">
 					<h5 class="card-title">
@@ -198,31 +252,37 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:16:21</td>
+				<td>01:11:24</td>
 				<td>
-Highlight element [Element (id = d58a053e-51a0-43cb-9baa-33a6c5946695)] passed									</td>
+Highlight element [Element (id = 2a2183d5-2e24-4be6-9357-8182351c80b5)] passed									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:16:22</td>
+				<td>01:11:24</td>
+				<td>
+<span class='badge black-text green'>Highlight element [Element (id = 2a2183d5-2e24-4be6-9357-8182351c80b5)] passed</span>									</td>
+			</tr>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>01:11:25</td>
 				<td>
 Take screenshot successfully									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>12:16:22</td>
+				<td>01:11:25</td>
+				<td>
+<span class='badge black-text green'>Take screenshot successfully</span>									</td>
+			</tr>
+			<tr class="event-row">
+				<td><i class="fa fa-check text-pass"></i></td>
+				<td>01:11:25</td>
 				<td>
 Sendkeys to element [//input[@name = 'uid']] passed									</td>
 			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-info text-info"></i></td>
-				<td>12:16:22</td>
-				<td>
-<div class='json-tree' id='code-block-json-1'></div><script>function jsonTreeCreate1() { document.getElementById('code-block-json-1').innerHTML = JSONTree.create({'foo':'bar':'foos':['b','a','r'], 'bar':{'foo':'bar', 'bar':false, 'foobar':1234}}); }jsonTreeCreate1();</script>									</td>
-			</tr>
 	</tbody>
 </table>
-						<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221108121621.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221108121621.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221108121621.png'>					</div>
+						<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011124.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011124.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011124.png'>					</div>
 				</div>
 			</div>
 	</div>
@@ -297,7 +357,7 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
               <i class="fa fa-check text-white"></i>
             </div>
           </td>
-          <td>12:16:16</td>
+          <td>01:11:09</td>
           <td class='linked' test-id='1' root-id="1">
             <a href="#">RookiesTest.LoginTest</a>
           </td>
@@ -357,7 +417,7 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
 	                </div>
 	            </div>
 	            <div class="card-footer">
-	                <div><small data-tooltip='100%'><b>1</b> steps passed</small></div>
+	                <div><small data-tooltip='100%'><b>2</b> steps passed</small></div>
 	                <div>
 	                    <small data-tooltip='0%'><b>0</b> steps failed, 
 	                    <b data-tooltip='0%'>0</b> others
@@ -393,7 +453,7 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Steps</h6>
-							<h2 class="font-size-28 font-weight-light">1</h2>
+							<h2 class="font-size-28 font-weight-light">2</h2>
 							<span class="text-semibold text-success font-size-15">
 							<i class="ti-arrow-up font-size-11"></i> 
 								<span>100%</span>
@@ -412,7 +472,7 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">08/11/2022 12:16:16 CH</h6>
+							<h6 class="font-weight-light">10/11/2022 1:11:09 SA</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -428,7 +488,7 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:05.3033742</h6>
+							<h6 class="font-weight-light">00:00:15.4911416</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -539,8 +599,8 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
 		warningParent: 0,
 		skipParent: 0,
 		exceptionsParent: 0,
-		childCount: 1,
-		passChild: 1,
+		childCount: 2,
+		passChild: 2,
 		failChild: 0,
 		fatalChild: 0,
 		errorChild: 0,
