--- a/Automation_Test/SeleniumAdvantage/RookiesTest/Reports/Latest Reports/index.html
+++ b/Automation_Test/SeleniumAdvantage/RookiesTest/Reports/Latest Reports/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">10/11/2022 1:11:09 SA</span>
+                    <span class="badge badge-primary">10/11/2022 12:05:08 CH</span>
                 </a>
             </li>
         </ul>
@@ -151,8 +151,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">RookiesTest.LoginTest</p> 
-								<p class="duration text-sm">0h:0m:15s+092ms</p> 
-								<span class="datetime">01:11:09 SA</span>
+								<p class="duration text-sm">0h:0m:12s+746ms</p> 
+								<span class="datetime">12:05:08 CH</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -160,9 +160,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">RookiesTest.LoginTest</h5>
-										<span class='badge badge-success'>10/11/2022 1:11:09 SA</span>
-										<span class='badge badge-danger'>10/11/2022 1:11:25 SA</span>
-										<span class='badge badge-default'>0h:0m:15s+092ms</span>
+										<span class='badge badge-success'>10/11/2022 12:05:08 CH</span>
+										<span class='badge badge-danger'>10/11/2022 12:05:21 CH</span>
+										<span class='badge badge-default'>0h:0m:12s+746ms</span>
 									</div>
 									<div class="m-t-15">
 		                                	<div class="attributes">
@@ -198,37 +198,25 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:15</td>
+				<td>12:05:12</td>
 				<td>
-Highlight element [Element (id = 020f2ada-1517-40a1-b35e-2ccf2c3ed30f)] passed									</td>
+Highlight element [Element (id = bde20e06-33db-4bad-ab86-6da428b9b9d5)] passed									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:15</td>
-				<td>
-<span class='badge black-text green'>Highlight element [Element (id = 020f2ada-1517-40a1-b35e-2ccf2c3ed30f)] passed</span>									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:16</td>
+				<td>12:05:12</td>
 				<td>
 Take screenshot successfully									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:16</td>
-				<td>
-<span class='badge black-text green'>Take screenshot successfully</span>									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:16</td>
+				<td>12:05:12</td>
 				<td>
 Sendkeys to element [//input[@name = 'uid']] passed									</td>
 			</tr>
 	</tbody>
 </table>
-						<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011115.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011115.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011115.png'>					</div>
+						<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120512.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120512.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120512.png'>					</div>
 				</div>
 			</div>
 			<div class="card">
@@ -252,37 +240,25 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:24</td>
+				<td>12:05:21</td>
 				<td>
-Highlight element [Element (id = 2a2183d5-2e24-4be6-9357-8182351c80b5)] passed									</td>
+Highlight element [Element (id = 3d6ae2ef-db60-493b-9fe2-b145c936d786)] passed									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:24</td>
-				<td>
-<span class='badge black-text green'>Highlight element [Element (id = 2a2183d5-2e24-4be6-9357-8182351c80b5)] passed</span>									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:25</td>
+				<td>12:05:21</td>
 				<td>
 Take screenshot successfully									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:25</td>
-				<td>
-<span class='badge black-text green'>Take screenshot successfully</span>									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:11:25</td>
+				<td>12:05:21</td>
 				<td>
 Sendkeys to element [//input[@name = 'uid']] passed									</td>
 			</tr>
 	</tbody>
 </table>
-						<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011124.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011124.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011124.png'>					</div>
+						<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120521.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120521.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\RookiesTest\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120521.png'>					</div>
 				</div>
 			</div>
 	</div>
@@ -357,7 +333,7 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
               <i class="fa fa-check text-white"></i>
             </div>
           </td>
-          <td>01:11:09</td>
+          <td>12:05:08</td>
           <td class='linked' test-id='1' root-id="1">
             <a href="#">RookiesTest.LoginTest</a>
           </td>
@@ -472,7 +448,7 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">10/11/2022 1:11:09 SA</h6>
+							<h6 class="font-weight-light">10/11/2022 12:05:08 CH</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -488,7 +464,7 @@ Sendkeys to element [//input[@name = 'uid']] passed									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:15.4911416</h6>
+							<h6 class="font-weight-light">00:00:12.8480409</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
