--- a/Automation_Test/SeleniumAdvantage/SeleniumAdvantage_Day2/Reports/Latest Reports/index.html
+++ b/Automation_Test/SeleniumAdvantage/SeleniumAdvantage_Day2/Reports/Latest Reports/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">10/11/2022 1:12:14 SA</span>
+                    <span class="badge badge-primary">10/11/2022 12:05:34 CH</span>
                 </a>
             </li>
         </ul>
@@ -151,8 +151,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">SeleniumAdvantage_Day2.Converted_GoogleTests.TestCases.GoogleTests</p> 
-								<p class="duration text-sm">0h:0m:8s+602ms</p> 
-								<span class="datetime">01:12:14 SA</span>
+								<p class="duration text-sm">0h:0m:10s+558ms</p> 
+								<span class="datetime">12:05:34 CH</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -160,9 +160,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">SeleniumAdvantage_Day2.Converted_GoogleTests.TestCases.GoogleTests</h5>
-										<span class='badge badge-success'>10/11/2022 1:12:14 SA</span>
-										<span class='badge badge-danger'>10/11/2022 1:12:23 SA</span>
-										<span class='badge badge-default'>0h:0m:8s+602ms</span>
+										<span class='badge badge-success'>10/11/2022 12:05:34 CH</span>
+										<span class='badge badge-danger'>10/11/2022 12:05:44 CH</span>
+										<span class='badge badge-default'>0h:0m:10s+558ms</span>
 									</div>
 									<div class="m-t-15">
 		                                	<div class="attributes">
@@ -198,109 +198,73 @@
 	<tbody>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:16</td>
+				<td>12:05:36</td>
 				<td>
-Highlight element [Element (id = ddf2be11-87c4-4367-bbf9-a417875c63da)] passed									</td>
+Highlight element [Element (id = 16d690a8-93c6-48f5-9512-6a7d089a0133)] passed									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:16</td>
-				<td>
-<span class='badge black-text green'>Highlight element [Element (id = ddf2be11-87c4-4367-bbf9-a417875c63da)] passed</span>									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:16</td>
+				<td>12:05:36</td>
 				<td>
 Take screenshot successfully									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:16</td>
-				<td>
-<span class='badge black-text green'>Take screenshot successfully</span>									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:16</td>
+				<td>12:05:36</td>
 				<td>
 Sendkeys to element [//*[contains(@title,'Tìm kiếm')]] passed									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:16</td>
+				<td>12:05:36</td>
 				<td>
-Highlight element [Element (id = ddf2be11-87c4-4367-bbf9-a417875c63da)] passed									</td>
+Highlight element [Element (id = 16d690a8-93c6-48f5-9512-6a7d089a0133)] passed									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:16</td>
-				<td>
-<span class='badge black-text green'>Highlight element [Element (id = ddf2be11-87c4-4367-bbf9-a417875c63da)] passed</span>									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:18</td>
+				<td>12:05:38</td>
 				<td>
 Press enter on element [//*[contains(@title,'Tìm kiếm')]] passed									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:18</td>
+				<td>12:05:38</td>
 				<td>
-<span class='badge black-text green'>Press enter on element [//*[contains(@title,'Tìm kiếm')]] passed</span>									</td>
+Take screenshot successfully									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:18</td>
+				<td>12:05:38</td>
 				<td>
 Actual result [reddit] is the same as [reddit]									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:18</td>
+				<td>12:05:38</td>
 				<td>
-<span class='badge black-text green'>Actual result [reddit] is the same as [reddit]</span>									</td>
+Highlight element [Element (id = 4e45ca04-8e47-4170-99a0-8e218c25cae7)] passed									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:18</td>
-				<td>
-Highlight element [Element (id = bd6e5074-8463-4a89-90c2-3edcdcd2c024)] passed									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:18</td>
-				<td>
-<span class='badge black-text green'>Highlight element [Element (id = bd6e5074-8463-4a89-90c2-3edcdcd2c024)] passed</span>									</td>
-			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:23</td>
+				<td>12:05:44</td>
 				<td>
 Clicking on element [//*[contains(@h3,"") and text()= 'Reddit - Dive into anything']] passed									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:23</td>
+				<td>12:05:44</td>
 				<td>
-<span class='badge black-text green'>Clicking on element [//*[contains(@h3,"") and text()= 'Reddit - Dive into anything']] passed</span>									</td>
+Take screenshot successfully									</td>
 			</tr>
 			<tr class="event-row">
 				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:23</td>
+				<td>12:05:44</td>
 				<td>
 Actual result [Sign Up] is the same as [Sign Up]									</td>
 			</tr>
-			<tr class="event-row">
-				<td><i class="fa fa-check text-pass"></i></td>
-				<td>01:12:23</td>
-				<td>
-<span class='badge black-text green'>Actual result [Sign Up] is the same as [Sign Up]</span>									</td>
-			</tr>
 	</tbody>
 </table>
-						<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011216.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011216.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110011216.png'>					</div>
+						<img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120536.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120536.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120536.png'><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120538.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120538.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120538.png'><img class='r-img' title='' onerror='this.style.display="none"' data-featherlight='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120544.png' src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120544.png' data-src='D:\NashTech\Rookies\NashTech_Homework\Automation_Test\SeleniumAdvantage\SeleniumAdvantage_Day2\bin\Debug\net6.0\..\..\..\Reports\Latest Reports\Screenshot/screenshot_20221110120544.png'>					</div>
 				</div>
 			</div>
 	</div>
@@ -375,7 +339,7 @@ Actual result [Sign Up] is the same as [Sign Up]									</td>
               <i class="fa fa-check text-white"></i>
             </div>
           </td>
-          <td>01:12:14</td>
+          <td>12:05:34</td>
           <td class='linked' test-id='1' root-id="1">
             <a href="#">SeleniumAdvantage_Day2.Converted_GoogleTests.TestCases.GoogleTests</a>
           </td>
@@ -490,7 +454,7 @@ Actual result [Sign Up] is the same as [Sign Up]									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">10/11/2022 1:12:14 SA</h6>
+							<h6 class="font-weight-light">10/11/2022 12:05:34 CH</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -506,7 +470,7 @@ Actual result [Sign Up] is the same as [Sign Up]									</td>
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:08.7787093</h6>
+							<h6 class="font-weight-light">00:00:10.6962741</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
