--- a/Automation_Test/SeleniumAdvantage/SeleniumAdvantage_Day3/Reports/Latest Reports/index.html
+++ b/Automation_Test/SeleniumAdvantage/SeleniumAdvantage_Day3/Reports/Latest Reports/index.html
@@ -49,7 +49,7 @@
           </li>
             <li class="m-r-10">
                 <a href="#">
-                    <span class="badge badge-primary">14/11/2022 1:16:40 SA</span>
+                    <span class="badge badge-primary">14/11/2022 9:52:12 SA</span>
                 </a>
             </li>
         </ul>
@@ -151,8 +151,8 @@
 						<div class="open-test">
 							<div class="test-detail"> 
 								<p class="name">SeleniumAdvantage_Day3.TestCases.Day3_API_Test</p> 
-								<p class="duration text-sm">0h:0m:0s+007ms</p> 
-								<span class="datetime">01:16:40 SA</span>
+								<p class="duration text-sm">0h:0m:4s+520ms</p> 
+								<span class="datetime">09:52:12 SA</span>
 							</div>
 						</div>
 						<div class="test-contents d-none">
@@ -160,9 +160,9 @@
 								<div class="p-v-10 d-inline-block">	
 									<div class="info">
 										<h5 class="test-status text-pass">SeleniumAdvantage_Day3.TestCases.Day3_API_Test</h5>
-										<span class='badge badge-success'>14/11/2022 1:16:40 SA</span>
-										<span class='badge badge-danger'>14/11/2022 1:16:41 SA</span>
-										<span class='badge badge-default'>0h:0m:0s+007ms</span>
+										<span class='badge badge-success'>14/11/2022 9:52:12 SA</span>
+										<span class='badge badge-danger'>14/11/2022 9:52:17 SA</span>
+										<span class='badge badge-default'>0h:0m:4s+520ms</span>
 									</div>
 									<div class="m-t-15">
 		                                	<div class="attributes">
@@ -180,7 +180,7 @@
 			<div class="card">
 				<div class="card-header" role="tab">
 					<h5 class="card-title">
-						<div class="node">APIRequestTest04</div>
+						<div class="node">APIRequestTest10</div>
 						<div class="status-avatar float-right pass-bg">
 							<i class="fa fa-check text-white"></i>
                         </div>
@@ -188,7 +188,30 @@
 				</div>
 				<div class="collapse">
 					<div class="card-body">
-																	</div>
+						
+<table class="table table-sm">
+	<thead><tr>
+		<th class="status-col">Status</th>
+		<th class="timestamp-col">Timestamp</th>
+		<th class="details-col">Details</th>
+	</tr></thead>
+	<tbody>
+			<tr class="event-row">
+				<td><i class="fa fa-info text-info"></i></td>
+				<td>09:52:17</td>
+				<td>
+<p>Request url: https://apichallenges.herokuapp.com/todos&doneStatus=Hong Anh</p>
+                    <p>Response status: OK</p>									</td>
+			</tr>
+			<tr class="event-row">
+				<td><i class="fa fa-info text-info"></i></td>
+				<td>09:52:17</td>
+				<td>
+<div class='json-tree' id='code-block-json-1'></div><script>function jsonTreeCreate1() { document.getElementById('code-block-json-1').innerHTML = JSONTree.create({"todos":[{"id":620,"title":"file paperwork","doneStatus":false,"description":""},{"id":619,"title":"scan paperwork","doneStatus":false,"description":""},{"id":624,"title":"process payroll","doneStatus":false,"description":""},{"id":627,"title":"tidy meeting room","doneStatus":false,"description":""},{"id":625,"title":"train staff","doneStatus":false,"description":""},{"id":628,"title":"install webcam","doneStatus":false,"description":""},{"id":626,"title":"schedule meeting","doneStatus":false,"description":""},{"id":623,"title":"pay invoices","doneStatus":false,"description":""},{"id":621,"title":"process payments","doneStatus":false,"description":""},{"id":622,"title":"escalate late payments","doneStatus":false,"description":""}]}); }jsonTreeCreate1();</script>									</td>
+			</tr>
+	</tbody>
+</table>
+											</div>
 				</div>
 			</div>
 	</div>
@@ -263,7 +286,7 @@
               <i class="fa fa-check text-white"></i>
             </div>
           </td>
-          <td>01:16:40</td>
+          <td>09:52:12</td>
           <td class='linked' test-id='1' root-id="1">
             <a href="#">SeleniumAdvantage_Day3.TestCases.Day3_API_Test</a>
           </td>
@@ -378,7 +401,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Start</h6>
-							<h6 class="font-weight-light">14/11/2022 1:16:40 SA</h6>
+							<h6 class="font-weight-light">14/11/2022 9:52:12 SA</h6>
 							<span class="text-semibold text-success font-size-15">
 						</div>
 						<div class="align-self-end">
@@ -394,7 +417,7 @@
 	                <div class="media justify-content-between">
 						<div>
 							<h6 class="card-title">Duration</h6>
-							<h6 class="font-weight-light">00:00:04.5627990</h6>
+							<h6 class="font-weight-light">00:00:04.6859993</h6>
 							<span class="text-semibold text-danger font-size-15">
 						</div>
 						<div class="align-self-end">
